--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.1.1",
+    "@mui/x-date-pickers": "^7.1.1",
+    "@mui/x-date-pickers-pro": "^7.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,7 +19,9 @@
     "@types/react-dom": "^18.2.24",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
